--- a/Homework1 Arisova.ipynb
+++ b/Homework1 Arisova.ipynb
@@ -1798,7 +1798,7 @@
     "В результате работы над первой частью можно сделать следующие выводы: (кроме тех, что были сделаны ранее)\n",
     "\n",
     "- Наиболее важным является не повышение общей точности, а правильность предсказания согласия.\n",
-    "- Эта задача не является простой, очень велик случайный фактор, а все данные, что имеются у банка не сильно влияют на исход звонка, отсюда малая точность предсказаний согласия.\n",
+    "- Эта задача не является простой, очень велик случайный фактор, а все данные, что имеются у банка, не сильно влияют на исход звонка, отсюда малая точность предсказаний согласия.\n",
     "- Борьба с несбалансированностью классов не дала существенного эффекта, поднимая для лучшего классификатора точность предсказания согласий на 6%, а общую точность на 2%.\n",
     "- kNN в целом работает на данной задаче намного лучше RandomForest, однако для второго не подбирались наилучшие параметры.\n",
     "- По поведению классификатора с большим числом соседей можно сказать, что точки, где исход звонка положительный, довольно редко собираются в кластеры, иначе точность их предсказания была бы выше 12%. Такое поведение показывает, что они в основном расположены произвольно в массе точек.\n",
@@ -1910,7 +1910,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Для одномерного результата работы LDA наилучшим оказывается kNN с k=1. Однако и общая точность и точность предсказания согласия ниже, чем без сокращения размерности."
+    "Для одномерного результата работы LDA наилучшим оказывается kNN с k=1. Однако, и общая точность, и точность предсказания согласия ниже, чем без сокращения размерности."
    ]
   },
   {
